# needre

./: .gitignore  Cargo.toml  README-ja.md  README.md  needre.conf  needre.service
.github/workflows/: ci.yml
needre/: Cargo.toml  build.rs
needre-common/: Cargo.toml
needre-common/src/: event.rs  lib.rs
needre-ebpf/: Cargo.toml
needre-ebpf/src/: main.rs
needre/src/: config.rs  main.rs
samples/: forker.c  hello.c  run-sample.sh
